--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,12 @@
 {
     "manifest_version": 2,
     "name": "ChannelPointCollector",
-    "description": "Collect Twitch channel point automaticly.",
-    "version": "1.0.0",
+    "description": "Automatically collects Twitch channel points.",
+    "version": "1.0.1",
+    "browser_action": {
+        "default_popup": "popup/popup.html",
+        "default_title": "ChannelPointCollector"
+    },
     "permissions": [
         "tabs",
         "storage",
@@ -12,5 +16,10 @@
         "scripts": [
             "background.js"
         ]
+    },
+    "icons": {
+        "128": "128x128.png",
+        "48": "48x48.png",
+        "16": "16x16.png"
     }
 }
