--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,20 @@
 {
-    "manifest_version": 2,
-    "name": "ChannelPointCollector",
-    "description": "Automatically collects Twitch channel points.",
-    "version": "0.2",
-    "browser_action": {
-        "default_popup": "popup/popup.html",
-        "default_title": "ChannelPointCollector"
-    },
-    "permissions": [
-        "tabs",
-        "storage",
-        "https://www.twitch.tv/*"
-    ],
-    "background": {
-        "scripts": [
-            "background.js"
-        ]
-    },
-    "icons": {
-        "128": "128x128.png",
-        "48": "48x48.png",
-        "16": "16x16.png"
-    }
+  "manifest_version": 3,
+  "name": "ChannelPointCollector",
+  "description": "Automatically collects Twitch channel points.",
+  "version": "0.3",
+  "action": {
+    "default_popup": "popup/popup.html",
+    "default_title": "ChannelPointCollector"
+  },
+  "permissions": ["tabs", "storage", "scripting"],
+  "host_permissions": ["https://www.twitch.tv/*"],
+  "background": {
+    "service_worker": "./background.js"
+  },
+  "icons": {
+    "128": "128x128.png",
+    "48": "48x48.png",
+    "16": "16x16.png"
+  }
 }
