--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,5 +13,11 @@
     "128": "128x128.png",
     "48": "48x48.png",
     "16": "16x16.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://www.twitch.tv/*"],
+      "js": ["js/content_script.js"]
+    }
+  ]
 }
